[project]
name = "chzzk-rekoda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohttp",
    "orjson",
    "rich",
    "streamlink",
    "uvloop; sys_platform != 'win32'",
]

[tool.uv.pip]
compile-bytecode = true
upgrade = true
universal = true
